--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
+<!--
+ The bootcamp I'm doing made github sound kinda like myspace
+ so here we go
+-->
 <head>
   <meta charset="utf-8">
   <title>m i c h a e l &nbsp o a t e s</title>
