--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="chunk">
       <span class="prompt">></span>
-      It's hosted on <strong>github</strong> but you can see that.<br />
+      It's hosted on <a href="https://github.com/tehoatse">GitHub</a> but you can see that.<br />
     </div>
     <div class="chunk">
       <span class="prompt">></span>
