--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <head>
   <meta charset="utf-8">
-  <title>m i c h a e l &nbsp o a t e s</title>
+  <title>m i c h a e l  o a t e s</title>
   <link rel="stylesheet" href="assets/style.css" />
   <link rel="icon" href="assets/favicon.ico" />
 </head>
@@ -23,7 +23,8 @@
       <span class="prompt">></span>
       This site was written in <strong>Atom</strong> using straight <strong>CSS</strong>
       and <strong>HTML</strong>. I'm not a fan of Atom, just trying it out to see
-      how it goes. Probably any changes will be done in <strong>VSCode</strong>.<br />
+      how it goes. Probably any changes will be done in <strong>VSCode</strong>. I'm tinkering with things
+      pretty much constantly.<br />
     </div>
     <div class="chunk">
       <span class="prompt">></span>
