--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           We're watching <a href="https://www.youtube.com/watch?v=X2lkvrMa27c">Twin Peaks</a>
         </li>
         <li>
-          I'm reading <a href="https://en.wikipedia.org/wiki/Viriconium">Viriconium</a>
+          I'm reading <a href="https://en.wikipedia.org/wiki/Viriconium">Viriconium</a> - I've finished the second novel in the collection <em>A Storm of Wings</em> and it was as haunting as everything else Harrison has written.
         </li>
         <li>
           I'm playing <a href="https://en.wikipedia.org/wiki/Dark_Souls_III">Dark Souls 3</a>
