--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="left-column"></div>
+  <div class="left-column hide"></div>
   <div class="content">
     <div>
       <span class="heading">michael oates</span><br />
