started work on todo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       fiction, play computer games and watch tv. I also listen to <strong>a lot of music</strong>.<br />
       <ul>
         <li>
-          We're watching <a href="https://www.youtube.com/watch?v=X2lkvrMa27c">Twin Peaks</a>
+          We're watching <a href="https://www.youtube.com/watch?v=X2lkvrMa27c">Twin Peaks</a>. I really liked the original series. We saw the <a href="https://www.youtube.com/watch?v=SVNQjThgg3o">prequel movie</a> which was very grim except for few moments, and now we're watching the Return.
         </li>
         <li>
           I'm reading <a href="https://en.wikipedia.org/wiki/Viriconium">Viriconium</a> - I've finished the second novel in the collection <em>A Storm of Wings</em> and it was as haunting as everything else Harrison has written.
