todo behavior working

--- a/todo.html
+++ b/todo.html
@@ -10,13 +10,17 @@
         todo<br>
         <button id="addTask" type="button">+</button>
         <div id="taskEntry" class="hidden">
-            this is hidden<br />
-            boo <br />
-            boo <br />
-            boo <br />
+            Title <input id="titleField" name="jobTitle" type="text">
+            <br>
+            <textarea id="taskField"></textarea><br>
+            <button id="submit">submit</button><button id="clearInput">clear</button>
         </div>
         <br/>
-        this is after the div
+        <div id="taskArray">
+            
+        </div>
+
+
         <script src="todo.js"></script>
     </body>
 </html>
