little bit of refactoring

--- a/todo.html
+++ b/todo.html
@@ -16,7 +16,7 @@
             <button id="submit">submit</button><button id="clearInput">clear</button>
         </div>
         <br/>
-        <div id="taskArray">
+        <div id="taskList">
             
         </div>
 
