--- a/todo.html
+++ b/todo.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="todo.css" />
         <link rel="icon" href="assets/favicon.ico" />
     </head>
-    <body>
+    <body class="darkgrey">
         <div id="column">
             <h1>todo.<button id="addTask" type="button">+</button></h1>
             
