--- a/todo.html
+++ b/todo.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Roboto:wght@900&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>todo</title>
-        <link rel="stylesheet" href="todo.css" />
+        <link rel="stylesheet" href="assets/todo.css" />
         <link rel="icon" href="assets/favicon.ico" />
     </head>
     <body class="darkgrey">
@@ -25,6 +25,6 @@
             
             </div>
         </div>
-    <script src="todo.js"></script>
+    <script src="assets/todo.js"></script>
     </body>
 </html>
